cmake_minimum_required(VERSION 3.5.1)
project(kalman_filter_sf)
set(CMAKE_CXX_STANDARD 11)
find_package(CURL REQUIRED)
#find_package(Eigen3 3.2.92 REQUIRED NO_MODULE)
find_package(Eigen3 REQUIRED)
find_package(PkgConfig)
#pkg_search_module(Eigen3 REQUIRED eigen3)
#find_package(PkgConfig REQUIRED)
find_package( Boost 1.58.0 COMPONENTS date_time)
pkg_check_modules(JSONCPP jsoncpp)
#link_libraries(${JSONCPP_LIBRARIES})
#set(INCLUDE_DIRS ${JSONCPP_INCLUDE_DIRS} ${CURL_INCLUDE_DIRS})
#set(INCLUDE_DIRS /usr/local/include ${CURL_INCLUDE_DIRS})
#include_directories(${INCLUDE_DIRS})
set(SOURCES imu_data.cpp kf.cpp kalman_filter_imu.cpp ${CURL_INCLUDE_DIRS}/curl/curl.h)
add_executable(kalman_filter_sf ${SOURCES})
if(Boost_FOUND)
      include_directories(${Boost_INCLUDE_DIRS})
      target_link_libraries(kalman_filter_sf ${Boost_DATE_TIME_LIBRARY} )
endif()
#target_include_directories(imu_data_access_class PUBLIC ${Jsoncpp_INCLUDE_DIRS})
#set(LIBS ${JSONCPP_LIBRARIES} ${CURL_LIBRARIES} Eigen3::Eigen)
include_directories(${EIGEN3_INCLUDE_DIR})
set(LIBS ${JSONCPP_LIBRARIES} ${CURL_LIBRARIES})
target_link_libraries(kalman_filter_sf ${LIBS})
